--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ui.PraDrawPieViewActivity"/>
         <activity android:name=".ui.PraDrawTwoActivity"/>
         <activity android:name=".ui.PraDrawTextActivity"/>
+        <activity android:name=".ui.PraDrawClipActivity"/>
     </application>
 
 </manifest>
